--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="table-section">
     <table class="table-container">
         <tr>
-            <td style= "width: 20%; vertical-align: top;">
+            <td style="vertical-align: top;">
                 <h2 id="main-container">Project</h2>
                 <ul>
                     <li class="table-list">HTML Only Portfolio</li><hr id="list-line">
@@ -56,7 +56,7 @@
 
             <td style="vertical-align: top;">
                 <h2 id="main-container">Education</h2>
-                <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
+                <p>Graduated with 3.76 out of 4<br> CGPA. Won Acme Hackathon.<br> Organized 30 sessions.</p>
                 <h3>Courses I took:</h3>
                 <ul>
                 <li class="table-list">Object Oriented Programming</li>
